# icitProject

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: appController.py  context.py  index.py
app/model/: database.py
