[tool.poetry]
name = "app"
version = "0.1.0"
description = "icitpProject"
authors = ["Zaboev Maxim <47784395+Moontrick@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
fastapi = "^0.110.0"
pydantic = "^2.6.4"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
